# win_partitions

./: .cargo_vcs_info.json  .gitignore  Cargo.toml  Cargo.toml.orig  LICENSE  README.md  build.rs
examples/: list_partitions.rs
src/: lib.rs  win_api.rs  windows_partitions.rs
