[package]
edition = "2021"
name = "win_partitions"
version = "0.4.0"
authors = ["AliAkbar Shahi", "Hamed J.I"]
description = "Provides list of system partitions and their information for Windows"
readme = "README.md"
keywords = ["partition", "drive", "windows"]
categories = ["hardware-support"]
license = "MIT"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc", "x86_64-pc-windows-gnu", "i686-pc-windows-msvc", "i686-pc-windows-gnu"]

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
]
